# hlambda

./: .env.template  .gitignore  README.md  create  hlambda.cabal  ignored-deps.txt  manifest.txt  pkg  stack.yaml  update
app/: Main.hs  S3Demo.hs
app/HLambda/: Commands.hs  Config.hs  Errors.hs  FitbitAPI.hs  Services.hs  Types.hs  Util.hs
app/HLambda/FitbitAPI/: Commands.hs  Types.hs
app/HLambdaApp/: Commands.hs  Config.hs  Errors.hs  FitbitAPI.hs  Services.hs  Types.hs  Util.hs
app/HLambdaApp/FitbitAPI/: Commands.hs  Types.hs
resources/: index.js
script/: four.txt  init  three.txt
src/: HLambda.hs
src/HLambda/: DateTime.hs
test/: DateTimeSpec.hs  Main.hs
