name:                                       hlambda
version:                                    0.1.0.0
homepage:                                   https://github.com/rcook/hlambda#readme
license:                                    MIT
license-file:                               LICENSE
author:                                     Richard Cook
maintainer:                                 rcook@rcook.org
copyright:                                  2018 Richard Cook
category:                                   Command Line
build-type:                                 Simple
cabal-version:                              >= 1.10
extra-source-files:                         README.md

source-repository head
  type:                                     git
  location:                                 https://github.com/rcook/hlambda.git

library
  default-language:                         Haskell2010
  hs-source-dirs:                           src
  ghc-options:                              -W
                                            -Wall
                                            -Werror=incomplete-patterns
                                            -Werror=missing-methods
                                            -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , text
                                          , time
  exposed-modules:                          HLambda
                                          , HLambda.DateTime

test-suite hlambda-test
  type:                                     exitcode-stdio-1.0
  default-language:                         Haskell2010
  hs-source-dirs:                           test
  main-is:                                  Main.hs
  ghc-options:                              -threaded
                                            -rtsopts
                                            -with-rtsopts=-N
                                            -W
                                            -Wall
                                            -Werror=incomplete-patterns
                                            -Werror=missing-methods
                                            -fwarn-unused-imports
  build-depends:                            QuickCheck
                                          , base >= 4.7 && < 5
                                          , hlambda
                                          , hspec
                                          , text
                                          , time
  other-modules:                            DateTimeSpec

executable hlambda
  default-language:                         Haskell2010
  hs-source-dirs:                           app
  main-is:                                  Main.hs
  ghc-options:                              -threaded
                                            -rtsopts
                                            -with-rtsopts=-N
                                            -W
                                            -Wall
                                            -Werror=incomplete-patterns
                                            -Werror=missing-methods
                                            -fwarn-unused-imports
  build-depends:                            aeson
                                          , amazonka
                                          , amazonka-dynamodb
                                          , amazonka-s3
                                          , amazonka-ssm
                                          , amazonka-sts
                                          , aws-easy
                                          , base >= 4.7 && < 5
                                          , data-default-class
                                          , hlambda
                                          , lens
                                          , req
                                          , serverless-haskell
                                          , text
                                          , time
                                          , unordered-containers
  other-modules:                            HLambdaApp.Commands
                                          , HLambdaApp.Config
                                          , HLambdaApp.Errors
                                          , HLambdaApp.FitbitAPI
                                          , HLambdaApp.FitbitAPI.Commands
                                          , HLambdaApp.FitbitAPI.Types
                                          , HLambdaApp.Services
                                          , HLambdaApp.Types
                                          , HLambdaApp.Util
                                          , S3Demo
